--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,497 @@
+/* Variables */
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  /* Color Scheme */
+  --primary-color: #5b63d8;
+  --secondary-color: #666;
+  --background-color: black;
+  --error-color:#FF0000; 
+  --text-color: black;
+  --text-color-secondary: #fff;
+  --text-color-subtitle:#313131;
+  --text-color-smaller-subtitle:#919191;
+  --border-color: #ccc;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  /* Typography */
+  --font-family-default: "sf-pro", sans-serif;
+  --font-family-secondary: "sf-pro", sans-serif;
+  --font-size-normal: 14px;
+  --font-size-subtitle: 16px;
+  --font-size-medium: 20px;
+  --font-size-large: 25px;
+  --font-weight-large: 400;
+  --font-size-input-mobile:18px;
+  --font-size-small: 12px;
+  --font-size-extra-small: 10px;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  /* Spacing */
+  --spacing-small: 5px;
+  --spacing-medium: 10px;
+  --spacing-large: 20px;
+  --spacing-extra-large: 40px;
+  
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  /* Padding */
+  --padding-input: 5px;
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  /* Button */
+  --button-primary-width: 196px;
+  --button-primary-height: 42px;
+  --button-primary-background-color: #000000;
+  --button-border-radius: 122px;
+  --button-small-width:125px;
+
+
+  /* Inputs */
+  --input-primary-width: 281px;
+  --input-primary-height: 42px;
+  --input-background-color:#F8F8F8;
+
+  /* Error */
+  --error-color: #FF0000;
+
+  /* Border */
+  --border-color:#000000;
+
+
+  /* Other */
+  --border-radius-input: 10px;
+  --qr-code-width: 125px;
+  --qr-code-height: auto;
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* Fonts */
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+@font-face {
+	font-family: "sailec-medium";
+	src: url("../../public/fonts/Sailec-Medium.ttf");
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+@font-face {
+	font-family: "sailec-light";
+	src: url("../../public/fonts/Sailec-Light.ttf");
 }
 
-html,
+@font-face {
+	font-family: "monument";
+	src: url("../../public/fonts/MonumentExtended-Regular.otf");
+}
+
+@font-face {
+	font-family: "the-future";
+	src: url("../../public/fonts/test-the-future-bold.woff2");
+}
+
+@font-face {
+	font-family: "sohne";
+	src: url("../../public/fonts/test-soehne-leicht.woff2");
+}
+
+@font-face {
+  font-family: 'sf-pro';
+  src: url('/fonts/SFProDisplay-Regular.woff2') format('woff2'),
+       url('/fonts/SFProDisplay-Regular.woff') format('woff'),
+       url('/fonts/SFProDisplay-Regular.otf') format('opentype');
+}
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font-family: var(--font-family-default);
+	vertical-align: baseline;
+  color: white;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+	line-height: 1.5;
+  background-color: var(--background-color);
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h1{
+  font-size: var(--font-size-large);
+  font-weight: var(--font-weight-large);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h2{
+  font-weight: var(--font-weight-large);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+p{
+  font-size: var(--font-size-normal);
+}
+
+a{
+  font-size: var(--font-size-normal);
+  text-decoration:none;
+}
+
+textarea{
+	font-family: var(--font-family-default);
+  font-size: 16px;
+}
+
+.close-button{
+  background: none;
+  color:black;
+  width: 50px;
+  height: 25px;
+  right: 0px;
+  position: relative;
+}
+
+.secondary-button{
+  background-color:white;
+  color:black;
+  border-width: 1.5px;
+}
+
+.unsubscribe-button{
+  background: none;
+  border: 1px solid black;
+  color:black;
+  width: var(--button-small-width);
+  height: 40px;
+  right: 0px;
+  position: relative;
+}
+
+.cancel-button{
+  background: none;
+  border: 1.5px solid black;
+  color:black;
+  width: var(--button-small-width);
+  height: 40px;
+  right: 0px;
+  position: relative;
+}
+
+.delete-button{
+  background-color:white;
+  border: 1.5px solid #FF0000;
+  /* border: 2px solid #FF0000; */
+  color:#FF0000;
+  width: var(--button-small-width);
+  height: 40px;
+  right: 0px;
+  position: relative;
+}
+
+.green-outline-button{
+  background-color:white;
+  border: 1.5px solid green;
+  /* border: 2px solid #FF0000; */
+  color:green;
+  width: var(--button-small-width);
+  height: 40px;
+  right: 0px;
+  position: relative;
+}
+
+.accept-button{
+  background-color:white;
+  border: 2px solid black;
+  color: black;
+  width: var(--button-small-width);
+  height: 40px;
+  right: 0px;
+  position: relative;
+}
+
+.smaller-width-button{
+  width: var(--button-small-width);
+}
+
+
+.underline{
+  text-decoration: underline;
+} 
+
+input{
+  font-size: var(--font-size-input-mobile);
+  border: 1px solid var(--secondary-color);
+  width: var(--input-primary-width);
+  height: var(--input-primary-height);
+  border-radius: var(--border-radius-input);
+  outline:0;
+  padding: var(--padding-input); 
+}
+
+.error-input{
+  border: 1px solid var(--error-color);
+}
+
+.error-color{
+  color:#FF0000;
+}
+
+.error-message{
+  border-radius: var(--border-radius-input);
+  padding: var(--padding-input); 
+  width: var(--input-primary-width);
+  border: 1px solid var(--error-color);
+  font-size: var(--font-size-small);
+}
+
+button{
+  font-size: var(--font-size-normal);
+  border: 1px solid var(--border-color);
+  width: var(--button-primary-width);
+  height: var(--button-primary-height);
+  border-radius: var(--button-border-radius);
+  outline:0;
+  background-color: var(--button-primary-background-color);
+  color: var(--text-color-secondary);
+}
+
+button:disabled{
+  opacity: .2;
+  cursor:not-allowed;
+}
+
+.text-secondary-color{
+  color: var(--text-color-secondary);  
+}
+
+.center-text{
+  text-align: center;
+}
+
+.left-text{
+  text-align: left;
+}
+
+.logo{
+  position:fixed;
+  left: 20px;
+  top: 15px;
+  width: 60px;
+}
+
+.icon{
+  width: 100px;
+}
+
+.center-horizontally{
+  transform:translateX(-50%);
+  left:50%;
+  position: relative;
+}
+
+.title-subtitle-container {
+  display: flex; /* Use flexbox to align items inline */
+  justify-content: left; /* Center the items horizontally */
+  align-items: baseline; /* Align items along the baseline for a natural 'line' */
+  gap: 5px; /* Optional: adds space between the title and subtitle */
+}
+
+.qr-code-dimensions{
+  width: var(--qr-code-width);
+  height: var(--qr-code-height);
+}
+
+.error-message{
+  margin-top: 10px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.subtitle{
+  color: var(--text-color-subtitle);
+  font-size: var(--font-size-subtitle);
+}
+
+.smaller-subtitle{
+  color: var(--text-color-smaller-subtitle);
+  font-size: var(--font-size-normal);
+}
+
+.container{
+  width: 100vw;
+  height: calc(var(--vh, 1vh) * 100 - 34px);
+}
+
+.invite-pass-image{
+  margin-bottom: 25px;
+  width: 300px;
+  margin-top: 30px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px 0px rgba(1,1,1,1);
+}
+
+
+/* Margins */
+.margin-bottom-small{
+  margin-bottom: var(--spacing-small)
+}
+
+.margin-bottom-medium{
+  margin-bottom: var(--spacing-medium)
+}
+
+.margin-bottom-large{
+  margin-bottom: var(--spacing-large)
+}
+
+.margin-top-small{
+  margin-top: var(--spacing-small)
+}
+
+.margin-top-medium{
+  margin-top: var(--spacing-medium)
+}
+
+.margin-top-large{
+  margin-top: var(--spacing-large)
+}
+
+.margin-top-extra-large{
+  margin-top: var(--spacing-extra-large)
+}
+
+.medium-font-size{
+  font-size: var(--font-size-medium);
+}
+
+.subtitle-font-size{
+  font-size: var(--font-size-subtitle);
+}
+
+.display-block{
+  display:block;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+.loader-transactions{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 2px solid #ccc;
+    border-top-color: #888;
+    animation: loader-spin 1s ease-in-out infinite;
+    z-index:999;
   }
+  
+  @keyframes loader-spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  .loader {
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+  
+  .loader:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 60px;
+    height: 60px;
+    margin: -30px 0 0 -30px;
+    border-radius: 50%;
+    border: 5px solid #ccc;
+    border-top-color: #000;
+    animation: loader 1s ease-in-out infinite;
+  }
+
+
+  .loader-register {
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin: 20px auto; /* give some space above and below the loader */
+    border-radius: 50%;
+    border: 3px solid #ccc;
+    border-top-color: #000;
+    animation: loader 1s ease-in-out infinite;
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(var(--vh, 1vh) * 100);
+  background-color: rgba(255, 255, 255, 0.6);
+  display: block;
+  z-index: 9999;
+}
+
+.modal-content {
+  background-color: var(--background-color);
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+  width: 300px;
+  height: 110px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%, -50%);
+}
+
+.modal-content p {
+  color: black;
+  margin-top: 0px;
+}
+
+.clock-image{
+  width: 40px;
+  display:block;
+}
+  
+  @keyframes loader {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
