--- a/src/app/styles/hero.css
+++ b/src/app/styles/hero.css
@@ -2,7 +2,9 @@
     position: relative;
     width: 100vw;
     height: 100vh;
+    /* height: calc(var(--vh, 1vh) * 100 - 100px); */
     background-color: #000; /* Added background color */
+
 }
 
 .hero-content {
@@ -28,7 +30,7 @@
 .cta-text {
     font-size: 15px !important;
     border: 1px solid white;
-    padding: 5px !important;
+    padding: 15px !important;
     max-width: 350px !important;
     margin-bottom: 25px;
 }
@@ -99,9 +101,14 @@
         width: 75%;
     }
 
+    .hero-container{
+        height: calc(var(--vh, 1vh) * 100 - 75px);
+    }
+
+
     .cta-text {
-        font-size: 15px !important;
-        max-width: 280px !important;
+        font-size: 16px !important;
+        max-width: 350px !important;
     }
 }
 
@@ -110,6 +117,10 @@
         font-size: 30px;
         line-height: 35px;
         width: 85%;
+    }
+
+    .hero-container{
+        height: calc(var(--vh, 1vh) * 100 - 75px);
     }
 
     .hero-container p {
@@ -125,6 +136,11 @@
 }
 
 @media screen and (max-width: 480px) {
+
+    .hero-container{
+        height: calc(var(--vh, 1vh) * 100 - 75px);
+    }
+
     .hero-container h1 {
         font-size: 25px;
         line-height: 30px;
@@ -138,8 +154,8 @@
     }
 
     .cta-text {
-        font-size: 11px !important;
-        max-width: 200px !important;
+        font-size: 15px !important;
+        max-width: 250px !important;
     }
 
     .cta-button {
@@ -147,3 +163,4 @@
         width: 120px;
     }
 }
+
