--- a/src/app/styles/header.css
+++ b/src/app/styles/header.css
@@ -8,7 +8,7 @@
 
 .header-container h1{
     color:white;
-    font-family: "the-future";
+    font-family: "inter";
     text-transform:uppercase;
     text-align: center;
     line-height: 50px;
